config: add support Any as opaque config
Signed-off-by: Lizan Zhou <lizan@tetrate.io>

--- a/test/config/integration/server.yaml
+++ b/test/config/integration/server.yaml
@@ -42,7 +42,8 @@ static_resources:
             stat_prefix: router
             filters:
             - name: health_check
-              config:
+              typed_config:
+                "@type": type.googleapis.com/envoy.config.filter.http.health_check.v2.HealthCheck
                 endpoint: "/healthcheck"
                 pass_through_mode: false
             - name: rate_limit
@@ -75,7 +76,8 @@ static_resources:
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
-        config:
+        typed_config:
+          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
           value:
             filters:
             - name: health_check
@@ -409,7 +411,8 @@ stats_sinks:
         address: {{ ip_loopback_address }}
         port_value: 8125
 - name: envoy.statsd
-  config:
+  typed_config:
+    "@type": type.googleapis.com/envoy.config.metrics.v2.StatsdSink
     tcp_cluster_name: statsd
 watchdog: {}
 runtime:
