Apply review fixes - remove unnecessary request type constants - remove garbage comments - move operator<< helper to separate header - move requests (currently only offset_fetch) to separate header - remove unnecessary typedefs - add missing documentation - improve GeneratorMap
Signed-off-by: Adam Kotwasinski <adam.kotwasinski@gmail.com>

--- a/source/extensions/filters/network/kafka/BUILD
+++ b/source/extensions/filters/network/kafka/BUILD
@@ -12,10 +12,6 @@ load(
 envoy_package()
 
 envoy_cc_library(
-    name = "config",
-)
-
-envoy_cc_library(
     name = "kafka_request_codec_lib",
     srcs = ["request_codec.cc"],
     hdrs = [
@@ -31,7 +27,11 @@ envoy_cc_library(
 envoy_cc_library(
     name = "kafka_request_lib",
     srcs = ["kafka_request.cc"],
-    hdrs = ["kafka_request.h"],
+    hdrs = [
+        "debug_helpers.h",
+        "kafka_request.h",
+        "messages/offset_commit.h",
+    ],
     deps = [
         ":parser_lib",
         ":serialization_lib",
