--- a/source/common/config/BUILD
+++ b/source/common/config/BUILD
@@ -199,6 +199,35 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "incremental_subscription_factory_lib",
+    hdrs = ["incremental_subscription_factory.h"],
+    deps = [
+        ":incremental_subscription_lib",
+        ":utility_lib",
+        "//include/envoy/config:incremental_subscription_interface",
+        "//include/envoy/grpc:async_client_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+        "//source/common/protobuf",
+        "@envoy_api//envoy/api/v2/core:base_cc",
+    ],
+)
+
+envoy_cc_library(
+    name = "incremental_subscription_lib",
+    hdrs = ["incremental_subscription_impl.h"],
+    deps = [
+        ":utility_lib",
+        "//include/envoy/config:incremental_subscription_interface",
+        "//include/envoy/grpc:async_client_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+        "//source/common/common:backoff_lib",
+        "//source/common/common:minimal_logger_lib",
+        "//source/common/common:token_bucket_impl_lib",
+        "//source/common/protobuf",
+    ],
+)
+
+envoy_cc_library(
     name = "json_utility_lib",
     hdrs = ["json_utility.h"],
     deps = [
@@ -322,6 +351,7 @@ envoy_cc_library(
         ":json_utility_lib",
         ":resources_lib",
         "//include/envoy/config:grpc_mux_interface",
+        "//include/envoy/config:incremental_subscription_interface",
         "//include/envoy/config:subscription_interface",
         "//include/envoy/local_info:local_info_interface",
         "//include/envoy/registry",
