Add wrapped connection pool
This adds a wrapped connection pool whose purpose is to control how
connection pools are allocated and how connection are mapped to them.
These allocations and mappings depend on various criteria of the
request, chosen by an abstracted mapping, when a stream is first
handled.

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -299,3 +299,12 @@ envoy_cc_library(
         "@envoy_api//envoy/type:range_cc",
     ],
 )
+
+envoy_cc_library(
+    name = "wrapped_connection_pool_lib",
+    srcs = ["wrapped_connection_pool.cc"],
+    hdrs = ["wrapped_connection_pool.h"],
+    deps = [
+        "//include/envoy/http:conn_pool_interface",
+    ],
+)
