--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -30,7 +30,7 @@ build:clang-asan --test_tag_filters=-no_asan
 build:clang-asan --define signal_trace=disabled
 build:clang-asan --copt -DADDRESS_SANITIZER=1
 build:clang-asan --test_env=ASAN_SYMBOLIZER_PATH
-build:clang-asan --test_env=ASAN_OPTIONS=handle_abort=1:allow_addr2line=true
+build:clang-asan --test_env=ASAN_OPTIONS=handle_abort=1
 build:clang-asan --linkopt -fuse-ld=lld
 
 # Clang 5.0 TSAN
@@ -51,3 +51,7 @@ build:clang-msan --linkopt -fuse-ld=lld
 
 # Test options
 test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH
+
+# Add compile option for all C++ files
+build --cxxopt -Wno-error=unused-parameter
+
