Introduce composite deserializers for 2, 3, 4 delegates
Signed-off-by: Adam Kotwasinski <adam.kotwasinski@gmail.com>

--- a/source/extensions/filters/network/kafka/BUILD
+++ b/source/extensions/filters/network/kafka/BUILD
@@ -61,7 +61,10 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "serialization_lib",
-    hdrs = ["serialization.h"],
+    hdrs = [
+        "serialization.h",
+        "serialization_composite.h",
+    ],
     deps = [
         ":kafka_protocol_lib",
         "//include/envoy/buffer:buffer_interface",
