Add a factory for builing the connection mapper
We want to abstract creation of the mapper itself for a few reasons:
 1) The complexity of creating it based off config/etc doesn't belong at
    its creation point
 2) It helps with test introspection.

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -71,6 +71,25 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "connection_mapper_lib",
+    srcs = ["connection_mapper.cc"],
+    hdrs = ["connection_mapper.h"],
+    deps = [
+    ],
+)
+
+envoy_cc_library(
+    name = "connection_mapper_factory_lib",
+    srcs = ["connection_mapper_factory.cc"],
+    hdrs = ["connection_mapper_factory.h"],
+    deps = [
+        "//include/envoy/http:conn_pool_interface",
+        "//source/common/http:connection_mapper_lib",
+        "//source/common/singleton:threadsafe_singleton",
+    ],
+)
+
+envoy_cc_library(
     name = "codec_wrappers_lib",
     hdrs = ["codec_wrappers.h"],
     deps = ["//include/envoy/http:codec_interface"],
@@ -305,6 +324,7 @@ envoy_cc_library(
     srcs = ["wrapped_connection_pool.cc"],
     hdrs = ["wrapped_connection_pool.h"],
     deps = [
+        ":connection_mapper_lib",
         "//include/envoy/http:conn_pool_interface",
     ],
 )
