--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -36,6 +36,8 @@ envoy_cc_test(
         "//source/common/config:bootstrap_json_lib",
         "//source/common/config:utility_lib",
         "//source/common/event:dispatcher_lib",
+        "//source/common/http:connection_mapper_factory_lib",
+        "//source/common/http:connection_mapper_lib",
         "//source/common/network:socket_option_lib",
         "//source/common/network:transport_socket_options_lib",
         "//source/common/network:utility_lib",
@@ -45,12 +47,15 @@ envoy_cc_test(
         "//source/extensions/transport_sockets/raw_buffer:config",
         "//test/mocks/access_log:access_log_mocks",
         "//test/mocks/api:api_mocks",
+        "//test/mocks/event:event_mocks",
         "//test/mocks/http:http_mocks",
         "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/network:network_mocks",
         "//test/mocks/runtime:runtime_mocks",
         "//test/mocks/secret:secret_mocks",
         "//test/mocks/server:server_mocks",
+        "//test/mocks/ssl:ssl_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/mocks/tcp:tcp_mocks",
         "//test/mocks/thread_local:thread_local_mocks",
         "//test/mocks/upstream:upstream_mocks",
