Allow creating streams with LoadBalancerContext
We want to be able to pass the LoadBalancerContext to the connection
pools in case they use it to partition the contection. So, create a new
version of newStream that takes it as a parameter. We do this rather
than changing the existing newStream for two reasons:

1) We may know that we don't want to use the LoadBalancerContext when
calling newStream, so keep the old one around for that purpose
2) We don't need to change everywhere that uses the old method, since
for all intents and purposes, the old calls to newStream wouldn't use
LoadBalancerContext anyway!

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/include/envoy/http/BUILD
+++ b/include/envoy/http/BUILD
@@ -40,6 +40,7 @@ envoy_cc_library(
     deps = [
         ":codec_interface",
         "//include/envoy/event:deferred_deletable",
+        "//include/envoy/upstream:load_balancer_interface",
         "//include/envoy/upstream:upstream_interface",
     ],
 )
