--- a/examples/front-proxy/front-envoy.yaml
+++ b/examples/front-proxy/front-envoy.yaml
@@ -3,50 +3,25 @@ static_resources:
   - address:
       socket_address:
         address: 0.0.0.0
-        port_value: 80
+        port_value: 3307
     filter_chains:
     - filters:
-      - name: envoy.http_connection_manager
+      - name: envoy.filters.network.mysql_proxy
         config:
-          codec_type: auto
-          stat_prefix: ingress_http
-          route_config:
-            name: local_route
-            virtual_hosts:
-            - name: backend
-              domains:
-              - "*"
-              routes:
-              - match:
-                  prefix: "/service/1"
-                route:
-                  cluster: service1
-              - match:
-                  prefix: "/service/2"
-                route:
-                  cluster: service2
-          http_filters:
-          - name: envoy.router
-            config: {}
+          stat_prefix: mysql
+      - name: envoy.tcp_proxy
+        config:
+          stat_prefix: tcp
+          cluster: mysql
   clusters:
-  - name: service1
+  - name: mysql
     connect_timeout: 0.25s
-    type: strict_dns
+    type: static
     lb_policy: round_robin
-    http2_protocol_options: {}
     hosts:
     - socket_address:
-        address: service1
-        port_value: 80
-  - name: service2
-    connect_timeout: 0.25s
-    type: strict_dns
-    lb_policy: round_robin
-    http2_protocol_options: {}
-    hosts:
-    - socket_address:
-        address: service2
-        port_value: 80
+        address: 127.0.0.1
+        port_value: 3306
 admin:
   access_log_path: "/dev/null"
   address:
