--- a/source/common/tcp_proxy/BUILD
+++ b/source/common/tcp_proxy/BUILD
@@ -31,6 +31,7 @@ envoy_cc_library(
         "//source/common/access_log:access_log_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:empty_string",
+        "//source/common/common:macros",
         "//source/common/common:minimal_logger_lib",
         "//source/common/network:cidr_range_lib",
         "//source/common/network:filter_lib",
