Start fleshing out the wrapped connection pool
Starting to add concrete functionality using mock to test via the UT
infrastructure. Lots more to do!

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -316,6 +316,7 @@ envoy_cc_library(
     srcs = ["wrapped_connection_pool.cc"],
     hdrs = ["wrapped_connection_pool.h"],
     deps = [
+        ":conn_pool_base_lib",
         "//include/envoy/http:conn_pool_interface",
         "//include/envoy/http:connection_mapper_interface",
     ],
