--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -195,5 +195,6 @@ envoy_cc_library(
     external_deps = ["ssl"],
     deps = [
         "//source/common/common:assert_lib",
+        "//source/common/common:hex_lib",
     ],
 )
