Add logic to wrap callbacks
We need to be able to handle failures to allocate pools/etc from the
wrapped pool. We also need to be able to pass that information back up
to our owner. Consequently, we need to wrap the ConnectionPool
callbacks. This change adds that logic.

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/test/common/http/BUILD
+++ b/test/common/http/BUILD
@@ -298,6 +298,7 @@ envoy_cc_test(
         "//test/mocks/http:conn_pool_mocks",
         "//test/mocks/http:mock_connection_mapper",
         "//test/mocks/http:stream_decoder_mock",
+        "//test/mocks/http:stream_encoder_mock",
         "//test/mocks/upstream:cluster_info_mocks",
         "//test/mocks/upstream:load_balancer_context_mock",
     ],
