Add HTTP Context object.
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/include/envoy/http/BUILD
+++ b/include/envoy/http/BUILD
@@ -46,6 +46,15 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "context_interface",
+    hdrs = ["context.h"],
+    deps = [
+        ":codes_interface",
+        "//include/envoy/tracing:http_tracer_interface",
+    ],
+)
+
+envoy_cc_library(
     name = "filter_interface",
     hdrs = ["filter.h"],
     external_deps = ["abseil_optional"],
