--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -17,4 +17,4 @@
 # tracers.datadog extension
 /*/extensions/tracers/datadog @cgilmour @palazzem
 # mysql_proxy extension
-/*/extensions/filters/network/mysql_proxy @rshriram @mattklein123
+/*/extensions/filters/network/mysql_proxy @rshriram @venilnoronha @mattklein123
