--- a/test/extensions/filters/network/kafka/BUILD
+++ b/test/extensions/filters/network/kafka/BUILD
@@ -23,7 +23,7 @@ envoy_extension_cc_test(
 
 envoy_extension_cc_test(
     name = "serialization_composite_test",
-    srcs = ["generated/serialization_composite_test.cc"],
+    srcs = ["serialization_composite_test.cc"],
     extension_name = "envoy.filters.network.kafka",
     deps = [
         "//source/extensions/filters/network/kafka:serialization_lib",
@@ -32,8 +32,8 @@ envoy_extension_cc_test(
 )
 
 envoy_extension_cc_test(
-    name = "kafka_request_test",
-    srcs = ["kafka_request_test.cc"],
+    name = "kafka_request_parser_test",
+    srcs = ["kafka_request_parser_test.cc"],
     extension_name = "envoy.filters.network.kafka",
     deps = [
         "//source/extensions/filters/network/kafka:kafka_request_lib",
@@ -53,10 +53,23 @@ envoy_extension_cc_test(
 
 envoy_extension_cc_test(
     name = "requests_test",
-    srcs = ["generated/requests_test.cc"],
+    srcs = ["requests_test.cc"],
     extension_name = "envoy.filters.network.kafka",
     deps = [
         "//source/extensions/filters/network/kafka:kafka_request_codec_lib",
         "//test/mocks/server:server_mocks",
+    ],
+)
+
+genrule(
+    name = "kafka_generated_test",
+    srcs = [
+        "@kafka_produce_request_spec//file",
+        "@kafka_fetch_request_spec//file",
+    ],
+    outs = ["requests_test.cc"],
+    cmd = "./$(location //source/extensions/filters/network/kafka:kafka_code_generator) generate-test $(location requests_test.cc) $(location @kafka_produce_request_spec//file) $(location @kafka_fetch_request_spec//file)",
+    tools = [
+        "//source/extensions/filters/network/kafka:kafka_code_generator",
     ],
 )
