move client regisration to ratelimit registration
Signed-off-by: Rama Chavali <rama.rao@salesforce.com>

--- a/source/extensions/filters/common/ratelimit/BUILD
+++ b/source/extensions/filters/common/ratelimit/BUILD
@@ -15,19 +15,18 @@ envoy_cc_library(
     hdrs = ["ratelimit_impl.h"],
     deps = [
         ":ratelimit_client_interface",
-        ":ratelimit_registration_lib",
         "//include/envoy/grpc:async_client_interface",
         "//include/envoy/grpc:async_client_manager_interface",
         "//include/envoy/ratelimit:ratelimit_interface",
         "//include/envoy/registry",
         "//include/envoy/server:filter_config_interface",
+        "//include/envoy/server:instance_interface",
         "//include/envoy/singleton:manager_interface",
         "//include/envoy/upstream:cluster_manager_interface",
         "//source/common/common:assert_lib",
         "//source/common/common:minimal_logger_lib",
         "//source/common/http:headers_lib",
         "//source/common/tracing:http_tracer_lib",
-        "//source/server:configuration_lib",
         "@envoy_api//envoy/api/v2/ratelimit:ratelimit_cc",
         "@envoy_api//envoy/config/ratelimit/v2:rls_cc",
         "@envoy_api//envoy/service/ratelimit/v2:rls_cc",
@@ -39,6 +38,8 @@ envoy_cc_library(
     srcs = ["ratelimit_registration.cc"],
     hdrs = ["ratelimit_registration.h"],
     deps = [
+        ":ratelimit_client_interface",
+        ":ratelimit_lib",
         "//include/envoy/registry",
         "//include/envoy/server:filter_config_interface",
         "//include/envoy/server:instance_interface",
@@ -53,9 +54,8 @@ envoy_cc_library(
     hdrs = ["ratelimit.h"],
     external_deps = ["abseil_optional"],
     deps = [
-        ":ratelimit_registration_lib",
         "//include/envoy/ratelimit:ratelimit_interface",
-        "//include/envoy/server:filter_config_interface",
+        "//include/envoy/server:instance_interface",
         "//include/envoy/tracing:http_tracer_interface",
     ],
 )
