Set upstreamSourceInformation from mapper.
The mapper is responsible for telling the pool about the source IP
address to use when it maps that IP address to the pool. This commit
hooks that up by having the mapper provide the appropriate
UpstreamSourceInformation for the chosen IP address. Note that we
currently mask off the Port here since the mapper is only for IP
addresses at the moment.

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/source/common/http/wrapped/BUILD
+++ b/source/common/http/wrapped/BUILD
@@ -27,6 +27,7 @@ envoy_cc_library(
         "//include/envoy/http:conn_pool_interface",
         "//include/envoy/http:connection_mapper_interface",
         "//include/envoy/network:address_interface",
+        "//source/common/network:utility_lib",
     ],
 )
 
