Create SrcIpTransparentMapper in factory
We hadn't yet hooked up the factory to the mapper. This change does so.
Currently the default maximum number of pools is hardcoded. We should be
able to change this later.

Signed-off-by: Kyle Larose <kyle@agilicus.com>

--- a/source/common/http/wrapped/BUILD
+++ b/source/common/http/wrapped/BUILD
@@ -13,6 +13,7 @@ envoy_cc_library(
     srcs = ["connection_mapper_factory.cc"],
     hdrs = ["connection_mapper_factory.h"],
     deps = [
+        ":src_ip_transparent_mapper_lib",
         "//include/envoy/http:conn_pool_interface",
         "//include/envoy/http:connection_mapper_interface",
         "//source/common/singleton:threadsafe_singleton",
