--- a/include/envoy/network/BUILD
+++ b/include/envoy/network/BUILD
@@ -11,10 +11,7 @@ envoy_package()
 envoy_cc_library(
     name = "address_interface",
     hdrs = ["address.h"],
-    deps = [
-        ":io_handle_interface",
-        "//include/envoy/api:os_sys_calls_interface",
-    ],
+    deps = ["//include/envoy/api:os_sys_calls_interface"],
 )
 
 envoy_cc_library(
@@ -68,7 +65,6 @@ envoy_cc_library(
     name = "listen_socket_interface",
     hdrs = ["listen_socket.h"],
     deps = [
-        ":io_handle_interface",
         "//include/envoy/network:address_interface",
         "@envoy_api//envoy/api/v2/core:base_cc",
     ],
