--- a/test/extensions/filters/network/mysql_proxy/BUILD
+++ b/test/extensions/filters/network/mysql_proxy/BUILD
@@ -67,3 +67,20 @@ envoy_extension_cc_test(
         "//test/integration:integration_lib",
     ],
 )
+
+envoy_extension_cc_test(
+    name = "mysql_command_tests",
+    srcs = ["mysql_command_test.cc",
+    ],
+    data =  ["mysql_test_config.yaml"],
+    extension_name = "envoy.filters.network.mysql_proxy",
+    external_deps = ["sqlparser"],
+    deps = [
+        ":mysql_test_utils_lib",
+        "//source/common/tcp_proxy",
+        "//source/extensions/filters/network/mysql_proxy:config",
+        "//source/extensions/filters/network/mysql_proxy:proxy_lib",
+        "//source/extensions/filters/network/tcp_proxy:config",
+        "//test/integration:integration_lib",
+    ],
+)
