--- a/test/extensions/filters/network/mysql_proxy/BUILD
+++ b/test/extensions/filters/network/mysql_proxy/BUILD
@@ -70,9 +70,10 @@ envoy_extension_cc_test(
 
 envoy_extension_cc_test(
     name = "mysql_command_tests",
-    srcs = ["mysql_command_test.cc",
+    srcs = [
+        "mysql_command_test.cc",
     ],
-    data =  ["mysql_test_config.yaml"],
+    data = ["mysql_test_config.yaml"],
     extension_name = "envoy.filters.network.mysql_proxy",
     external_deps = ["sqlparser"],
     deps = [
