--- a/test/common/stats/BUILD
+++ b/test/common/stats/BUILD
@@ -121,5 +121,6 @@ envoy_cc_test_binary(
         "//source/common/stats:thread_local_store_lib",
         "//source/common/thread_local:thread_local_lib",
         "//test/test_common:simulated_time_system_lib",
+        "//test/test_common:utility_lib",
     ],
 )
