added a basic, working (non-aggregated) CDS over gRPC integration test
Signed-off-by: Fred Douglas <fredlas@google.com>

--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -64,6 +64,35 @@ envoy_proto_library(
 )
 
 envoy_cc_test(
+    name = "cds_integration_test",
+    srcs = ["cds_integration_test.cc"],
+    data = [
+        "//test/config/integration/certs",
+    ],
+    deps = [
+        ":http_integration_lib",
+        "//source/common/config:protobuf_link_hacks",
+        "//source/common/config:resources_lib",
+        "//source/common/protobuf:utility_lib",
+        "//source/common/ssl:context_config_lib",
+        "//source/common/ssl:context_lib",
+        "//source/common/ssl:ssl_socket_lib",
+        "//source/extensions/transport_sockets/ssl:config",
+        "//test/common/grpc:grpc_client_integration_lib",
+        "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:server_mocks",
+        "//test/test_common:network_utility_lib",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/api/v2:cds_cc",
+        "@envoy_api//envoy/api/v2:discovery_cc",
+        "@envoy_api//envoy/api/v2:eds_cc",
+        "@envoy_api//envoy/api/v2:lds_cc",
+        "@envoy_api//envoy/api/v2:rds_cc",
+        "@envoy_api//envoy/service/discovery/v2:ads_cc",
+    ],
+)
+
+envoy_cc_test(
     name = "eds_integration_test",
     srcs = ["eds_integration_test.cc"],
     deps = [
