--- a/api/envoy/config/filter/network/rate_limit/v2/BUILD
+++ b/api/envoy/config/filter/network/rate_limit/v2/BUILD
@@ -5,5 +5,8 @@ licenses(["notice"])  # Apache 2
 api_proto_library_internal(
     name = "rate_limit",
     srcs = ["rate_limit.proto"],
-    deps = ["//envoy/api/v2/ratelimit"],
+    deps = [
+        "//envoy/config/ratelimit/v2:rls",
+        "//envoy/api/v2/ratelimit",
+    ],
 )
