Add initial OpenCensus tracing support.
Signed-off-by: Emil Mikulic <g-easy@users.noreply.github.com>

--- a/api/envoy/config/trace/v2/BUILD
+++ b/api/envoy/config/trace/v2/BUILD
@@ -10,6 +10,7 @@ api_proto_library_internal(
     ],
     deps = [
         "//envoy/api/v2/core:grpc_service",
+        "@io_opencensus_trace//:trace_config",
     ],
 )
 
@@ -18,5 +19,6 @@ api_go_proto_library(
     proto = ":trace",
     deps = [
         "//envoy/api/v2/core:grpc_service_go_proto",
+        "@io_opencensus_trace//:trace_config_go_proto",
     ],
 )
