--- a/test/exe/BUILD
+++ b/test/exe/BUILD
@@ -2,6 +2,7 @@ licenses(["notice"])  # Apache 2
 
 load(
     "//bazel:envoy_build_system.bzl",
+    "envoy_cc_platform_dep",
     "envoy_cc_test",
     "envoy_package",
 )
@@ -29,10 +30,9 @@ envoy_cc_test(
     data = ["//test/config/integration:google_com_proxy_port_0"],
     deps = [
         "//source/common/api:api_lib",
-        "//source/exe:envoy_main_common_lib",
         "//test/test_common:contention_lib",
         "//test/test_common:environment_lib",
-    ],
+    ] + envoy_cc_platform_dep("//source/exe:envoy_main_common_lib"),
 )
 
 envoy_cc_test(
