--- a/test/exe/BUILD
+++ b/test/exe/BUILD
@@ -30,9 +30,10 @@ envoy_cc_test(
     data = ["//test/config/integration:google_com_proxy_port_0"],
     deps = [
         "//source/common/api:api_lib",
+        "//source/exe:envoy_main_common_lib",
         "//test/test_common:contention_lib",
         "//test/test_common:environment_lib",
-    ] + envoy_cc_platform_dep("//source/exe:envoy_main_common_lib"),
+    ] + envoy_cc_platform_dep("//source/exe:legacy_main_lib"),
 )
 
 envoy_cc_test(
